long message overflow fix

--- a/src/containers/HomePage/style.css
+++ b/src/containers/HomePage/style.css
@@ -81,6 +81,7 @@
     border-radius: 10px;
     margin: 5px;
     display: inline-block;
+	word-break: break-word;
 }
 .messageStyle-right {
 	background: darkgoldenrod;
